fix button on mobile

--- a/src/theme/input/scss/index.scss
+++ b/src/theme/input/scss/index.scss
@@ -444,5 +444,11 @@ aside {
     }
 }
 
+.mobile-hide {
+    @media (max-width: $breakpoint-tablet) {
+        display: none;
+    }
+}
+
 @import "./header.scss";
 @import "./footer.scss";
